[package]
name = "cronwhen"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Command-line utility for printing the next iteration of configured crons."
authors = ["Aram Peres <aram.peres@gmail.com>"]
repository = "https://github.com/aramperes/cronwhen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
cron-parser = "0.8"
anyhow = "1"
regex = "1"
